tests/ui/dep-graph/dep-graph-struct-signature.stderr
error: no path from `WillChange` to `type_of`
  --> $DIR/dep-graph-struct-signature.rs:28:34
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |                                  ^^^^^^^

error: no path from `WillChange` to `associated_item`
  --> $DIR/dep-graph-struct-signature.rs:29:34
   |
LL |     #[rustc_then_this_would_need(associated_item)]
   |                                  ^^^^^^^^^^^^^^^

error: no path from `WillChange` to `trait_def`
  --> $DIR/dep-graph-struct-signature.rs:30:34
   |
LL |     #[rustc_then_this_would_need(trait_def)]
   |                                  ^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:36:34
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:37:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:40:34
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:41:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:46:34
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |                                  ^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:53:34
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |                                  ^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:61:38
   |
LL |         #[rustc_then_this_would_need(type_of)]
   |                                      ^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:63:38
   |
LL |         #[rustc_then_this_would_need(type_of)]
   |                                      ^^^^^^^

error: no path from `WillChange` to `type_of`
  --> $DIR/dep-graph-struct-signature.rs:68:34
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |                                  ^^^^^^^

error: no path from `WillChange` to `type_of`
  --> $DIR/dep-graph-struct-signature.rs:75:34
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |                                  ^^^^^^^

error: no path from `WillChange` to `fn_sig`
  --> $DIR/dep-graph-struct-signature.rs:81:34
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |                                  ^^^^^^

error: no path from `WillChange` to `fn_sig`
  --> $DIR/dep-graph-struct-signature.rs:84:34
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |                                  ^^^^^^

error: no path from `WillChange` to `typeck`
  --> $DIR/dep-graph-struct-signature.rs:85:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:32:38
   |
LL |         #[rustc_then_this_would_need(fn_sig)]
   |                                      ^^^^^^

error: no path from `WillChange` to `fn_sig`
  --> $DIR/dep-graph-struct-signature.rs:77:38
   |
LL |         #[rustc_then_this_would_need(fn_sig)]
   |                                      ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:48:38
   |
LL |         #[rustc_then_this_would_need(fn_sig)]
   |                                      ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:49:38
   |
LL |         #[rustc_then_this_would_need(typeck)]
   |                                      ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:55:38
   |
LL |         #[rustc_then_this_would_need(fn_sig)]
   |                                      ^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:56:38
   |
LL |         #[rustc_then_this_would_need(typeck)]
   |                                      ^^^^^^

error: aborting due to 22 previous errors

